# marinaMoji

./: CITATION.cff  README.md  VOCABULARY_POLICY.md
.github/ISSUE_TEMPLATE/: build_error.yml
.github/workflows/: android.yaml  lint.yaml  linux.yaml  macos.yaml  windows.yaml
docker/: README.md
docker/ubuntu22.04/: README.md
docker/ubuntu24.04/: README.md
docs/: GTK_TOOLBAR.md  HOW_SYNC_WORKS.md  LOCALIZATION.md  MACOS_PORT_PLAN.md  MANYOSHU_MODE.md  MARINAMOJI.md  MARINAMOZC.md  MODE_LAB.md  ODORIJI_PALETTE.md  RESTORE_MACHINE.md  SYMBOLS_PALETTE.md  SYNC_EXPERIMENTAL_NOTES.md  SYNC_MANUAL_QA.md  SYNC_PLAN.md  USER_DICTIONARY_PLAN.md  build_marinamoji_for_android.md  build_marinamoji_for_linux.md  build_marinamoji_in_docker.md  build_marinamoji_on_macos.md  build_marinamoji_on_windows.md  build_mozc_for_linux.md  build_mozc_in_osx.md  compiling_instructions_for_marina.md  uninstall_linux_marinamozc.sh
src/: .bazelrc  MODULE.bazel  config.bzl
src/base/: BUILD.bazel  const.h  system_util.cc
src/base/mac/: BUILD.bazel  mac_util.h  mac_util.mm  mac_util_test.mm
src/bazel/: BUILD.darts_clone.bazel  BUILD.marisa_trie.bazel  BUILD.opencc.bazel  BUILD.rapidjson.bazel  BUILD.tclap.bazel  qt_mac_repository.bzl
src/build_tools/: tweak_info_plist.py  tweak_info_plist_strings.py
src/client/: client.cc  client.h  client_interface.h  client_mock.h
src/composer/: BUILD.bazel  composer.cc  kaeriten_table_util.cc  kaeriten_table_util.h  kaeriten_table_util_test.cc  key_parser.cc  table.cc  table.h  table_test.cc
src/config/: config_handler.cc  config_handler.h
src/data/dictionary_manual/: README.md
src/data/dictionary_oss/: aux_dictionary.tsv
src/data/images/: generate_icons.py
src/data/installer/: credits_en.html
src/data/keymap/: atok.tsv  chromeos.tsv  kotoeri.tsv  mobile.tsv  ms-ime.tsv
src/dictionary/: BUILD.bazel
src/engine/: engine_converter.cc  engine_converter.h  engine_converter_interface.h
src/gui/about_dialog/: BUILD.bazel  about_dialog.cc  about_dialog.qrc  about_dialog_fr.qm  about_dialog_fr.qtts
src/gui/administration_dialog/: BUILD.bazel  administration_dialog.cc  administration_dialog.qrc  administration_dialog_fr.qm  administration_dialog_fr.qtts
src/gui/base/: BUILD.bazel  tr.qrc  tr_fr.qm  tr_fr.qtts  util.cc
src/gui/config_dialog/: BUILD.bazel  README.md  config_dialog.cc  config_dialog.h  config_dialog.qrc  config_dialog.ui  config_dialog_en.qtts  config_dialog_fr.qm  config_dialog_fr.qtts  config_dialog_ja.qtts  config_dialog_shortcuts_tab.cc  config_dialog_shortcuts_tab.h  config_dialog_sync_tab.cc  config_dialog_sync_tab.h  kaeriten_table_editor.cc  kaeriten_table_editor.h  keymap_fr.qm  keymap_fr.qtts
src/gui/dictionary_tool/: BUILD.bazel  dictionary_tool.cc  dictionary_tool.h  dictionary_tool.qrc  dictionary_tool_fr.qm  dictionary_tool_fr.qtts
src/gui/error_message_dialog/: BUILD.bazel  error_message_dialog.qrc  error_message_dialog_fr.qm  error_message_dialog_fr.qtts
src/gui/post_install_dialog/: BUILD.bazel  post_install_dialog.qrc  post_install_dialog_fr.qm  post_install_dialog_fr.qtts
src/gui/tools/: generate_fr_qtts.py
src/gui/word_register_dialog/: BUILD.bazel  word_register_dialog.cc  word_register_dialog.h  word_register_dialog.qrc  (+2 more)
src/mac/: BUILD.bazel  Info.plist  KeyCodeMap.h  KeyCodeMap.mm  KeyCodeMap_test.mm  activate_marinamoji.sh  build_oss_macos.sh  build_package.py  bundle_qt_deps.sh  common.h  fix_bazel_xcode_config.sh  fix_qt_bundled_paths.sh  install_launchagents.sh  install_marinamoji.sh  main.mm  marina_localized_string.h  marina_localized_string.mm  mozc_imk_input_controller.h  mozc_imk_input_controller.mm  mozc_imk_input_controller_test.mm  mozc_toolbar.h  mozc_toolbar.mm  post_reset_marinamoji.sh  register_marinamoji.sh  renderer_receiver_test.mm  reset_hitoolbox_for_marinamoji.sh  restore_marinamoji_support.sh  scrub_marinamoji.sh  sync_overlay.h  sync_overlay.mm  tweak_installer_files.py
src/mac/mode_lab/: BUILD.bazel  ModeLabHost-Info.plist  ModeLabIME-Info.plist  activate_mode_lab.sh  install_mode_lab.sh  mode_lab_command.h  mode_lab_command.m  mode_lab_event.h  mode_lab_event.m  mode_lab_host.m  mode_lab_input_controller.h  mode_lab_input_controller.m  mode_lab_log.h  mode_lab_log.m  mode_lab_main.m  mode_lab_mode.h  mode_lab_mode.m  mode_lab_policy.h  mode_lab_policy.m  mode_lab_sequencer.h  mode_lab_sequencer.m  mode_lab_tis.h  mode_lab_tis.m  register_mode_lab.sh  scrub_mode_lab.sh
src/mac/mode_lab/English.lproj/: InfoPlist.strings
src/mac/mode_lab/Japanese.lproj/: InfoPlist.strings
src/prediction/: BUILD.bazel
src/protocol/: commands.proto  config.proto  renderer_style.proto
src/renderer/: BUILD.bazel  candidate_window_util.h  renderer_style.textproto  renderer_style_appearance.cc  renderer_style_appearance.h  renderer_style_appearance_mac.mm  renderer_style_dark.textproto  renderer_style_handler.cc  renderer_style_handler_test.cc  renderer_style_scale.cc  renderer_style_scale.h  renderer_style_scale_test.cc
src/rewriter/: BUILD.bazel  opencc_rewriter.cc  rewriter.cc
src/session/: BUILD.bazel  keymap.cc  keymap.h  keymap_test.cc  marina_number_row_bindings_util.cc  marina_number_row_bindings_util.h  marina_number_row_bindings_util_test.cc  session.cc  session.h  session_handler.cc  session_handler.h  session_handler_test.cc  session_test.cc
src/sync/: BUILD.bazel  Info.plist  sync_activity.cc  sync_activity.h  sync_bundle.cc  sync_bundle.h  sync_bundle_test.cc  sync_config.cc  sync_config.h  sync_config_test.cc  sync_crypto.cc  sync_crypto.h  sync_crypto_test.cc  sync_dictionary_tombstones.cc  sync_dictionary_tombstones.h  sync_dictionary_tombstones_test.cc  sync_key.cc  sync_key.h  sync_main.cc  sync_merge.cc  sync_merge.h  sync_merge_test.cc  sync_poll.cc  sync_poll.h  sync_poll_test.cc  sync_runner.cc  sync_runner.h  sync_runner_test.cc  sync_scheduler.cc  sync_scheduler.h  sync_service.cc  sync_service.h  sync_status.cc  sync_status.h  sync_status_test.cc  sync_util.cc  sync_util.h
src/unix/: BUILD.bazel  build_package.py  install_sync_daemon.sh
(+80 files in other folders)
